DFC-3900 - Changed the layout of the result item to fixed-width the labels and to justify/align the value text that comes back.

--- a/src/Dfc.FindACourse.Web/wwwroot/scss/partials/_search-result-item.scss
+++ b/src/Dfc.FindACourse.Web/wwwroot/scss/partials/_search-result-item.scss
@@ -25,6 +25,14 @@
 
         .label {
             color: $grey-1;
+            display: inline-block;
+            width: 4.62em;
+            vertical-align: top;
+        }
+
+        .value {
+            display: inline-block;
+            width: 28em;
         }
     }
 }
